Bug 1789591 - Align `WasmStructObject::inlineData_` using `alignas` instead of manually.  r=rhunt.

Bug 1774836 introduced a field `WasmStructObject::padding_` in an attempt to
ensure that the subsequent field, `WasmStructObject::inlineData_`, is at least
8-aligned relative to the start of the object.  Unfortunately this was done in
a way which is fragile -- it caused compilation failure on at least one Tier-2
target.  This patch removes `padding_` and instead uses `alignas` to request
the required alignment on `inlineData_`.

Differential Revision: https://phabricator.services.mozilla.com/D156698